<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nutry</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>

    <string name="date">Today</string>
    <string name="calories_remaining_number">1200</string>
    <string name="calories_remaining">CALORIES REMAINING</string>
    <string name="add_to_diary">Add to Diary</string>
    <string name="goal_calorie_number">1200</string>
    <string name="food_calorie_number">+ 0</string>
    <string name="exercise_calorie_number">- 0</string>
    <string name="net_calorie_number">0</string>
    <string name="uc_goal">GOAL</string>
    <string name="uc_food">FOOD</string>
    <string name="uc_exercise">EXERCISE</string>
    <string name="uc_net">NET</string>
    <string name="goal">Goal</string>
    <string name="total">Total</string>
    <string name="left">Left</string>
    <string name="food">Food</string>
    <string name="exercise">Exercise</string>
    <string name="net">Net</string>
    <string name="remaining">Remaining</string>
    <string name="daily_summary">DAILY SUMMARY</string>
    <string name="total_fat">Total Fat (g)</string>
    <string name="saturated_fat">Saturated (g)</string>
    <string name="polyunsaturated_fat">Polyunsaturated (g)</string>
    <string name="monounsaturated_fat">Monounsaturated (g)</string>
    <string name="trans_fat">Trans (g)</string>
    <string name="cholesterol">Cholesterol (mg)</string>
    <string name="sodium">Sodium (mg)</string>
    <string name="potassium">Potassium (mg)</string>
    <string name="total_carbs">Total Carbs (g)</string>
    <string name="fiber">Dietary Fiber (g)</string>
    <string name="sugar">Sugars (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="vit_A">Vitamin A</string>
    <string name="vit_C">Vitamin C</string>
    <string name="calcium">Calcium</string>
    <string name="iron">Iron</string>
    <string name="default_number">0</string>

    <string name="meals">MEALS</string>
    <string name="water_upcase">WATER</string>
    <string name="notes">NOTES</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="strength">Strength</string>
    <string name="water">Water</string>
    <string name="food_notes">Food Notes</string>
    <string name="exercise_notes">Exercise Notes</string>
    <string name="hi">
        <font fgcolor="#444444">Haven’t registered yet?  </font><font fgcolor="#000000">Join now</font>
    </string>

    <!-- Add Entry List Headers -->
    <string-array name="add_entry_list_header_array">
        <item>MEALS</item>
        <item>EXERCISE</item>
        <item>WATER</item>
        <item>NOTES</item>
    </string-array>

    <!-- Add Entry List Meal Items -->
    <string-array name="meal_child_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
    </string-array>

    <!-- Add Entry List Exercise Items -->
    <string-array name="exercise_child_array">
        <item>Cardiovascular</item>
        <item>Strength</item>
    </string-array>

    <!-- Add Entry List Water Items -->
    <string-array name="water_child_array">
        <item>Water</item>
    </string-array>

    <!-- Add Entry List Note Items -->
    <string-array name="note_child_array">
        <item>Food Notes</item>
        <item>Exercise Notes</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="navigations_array">
        <item>Home</item>
        <item>Diary</item>
        <item>Nutrition</item>
        <item>Progress</item>
        <item>Goals</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_home</item>
        <item>@drawable/ic_action_collection</item>
        <item>@drawable/ic_action_data_usage</item>
        <item>@drawable/ic_action_picture</item>
        <item>@drawable/ic_action_good</item>
        <item>@drawable/ic_action_settings</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="diary_category_settings_icon">Settings Icon</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="calorie_breakdown">CALORIE BREAKDOWN</string>
    <string name="Carbohydrates">Carbohydrates</string>
    <string name="Fat">Fat</string>
    <string name="Protein">Protein</string>
    <string name="carbs_goal">50 %</string>
    <string name="fat_goal">30 %</string>
    <string name="protein_goal">20 %</string>

    <string name="item_hint">Search for an Item</string>
    <string name="search_results">SEARCH RESULTS</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="serving_size">Serving Size</string>

    <string name="nutritional_facts">NUTRITIONAL FACTS</string>
    <string name="calories">Calories</string>
    <string name="todo">TODO</string>
    <string name="sign_up_if_you_re_new">Sign up, if you’re new!</string>
    <string name="forgot_pass">Forgot Pass?</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="please_sign_in_to_continue">Please sign in to continue.</string>
    <string name="hello_there">Hello There!</string>
    <string name="lets_sign_up">Lets Sign Up!</string>

    <!-- Diary Item List Headers -->
    <string-array name="diary_item_list_header_array">
        <item>BREAKFAST</item>
        <item>LUNCH</item>
        <item>DINNER</item>
        <item>SNACKS</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Summary</string>
    <string name="tab_text_2">Profile</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="y">y</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="long_press_to_edit_value">Long press to edit value</string>
    <string name="bmi">BMI:</string>
    <string name="gender">Gender:</string>
    <string name="target">Target:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="apply">Apply</string>

    <string-array name="exercise_intensity">
        <item>INTENSE</item>
        <item>NORMAL</item>
        <item>LIGHT</item>
    </string-array>
</resources>
