<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:piechart="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	 <sfsu.csc780.jied.nutriy.PieChart
	     android:id="@+id/piechart"
	     android:layout_width="match_parent"
	     android:layout_height="160dp"
	     android:layout_centerHorizontal="true"
	     android:layout_marginLeft="@dimen/small_horizontal_margin"     
         android:layout_marginRight="@dimen/small_horizontal_margin"
         android:layout_marginTop="@dimen/small_vertical_margin"     
         android:layout_marginBottom="@dimen/small_vertical_margin"
         android:paddingTop="@dimen/medium_padding"
         android:paddingBottom="@dimen/medium_padding"
	     
	     piechart:showChart="true" 
	     piechart:textColor="@color/white"
	     piechart:emptyPieColor="@color/empty_pie_blue" 
	     piechart:carbSliceColor="@color/pie_blue"
	     piechart:fatSliceColor="@color/pie_red"
	     piechart:proteinSliceColor="@color/pie_green"
	     piechart:carbPercentage="50"
	     piechart:fatPercentage="30"
	     piechart:proteinPercentage="20"
	     />
	 
	 <TableLayout 
	     android:id="@+id/piechart_table"
	     android:layout_below="@id/piechart"
	     android:layout_width="match_parent" android:layout_height="wrap_content"
	     android:layout_marginLeft="@dimen/activity_horizontal_margin"     
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="@dimen/activity_vertical_margin"     
         android:layout_marginBottom="@dimen/activity_vertical_margin">
         
	     <TableRow>
	         <TextView                   
                 android:layout_weight="1" />
             <TextView                     
                 android:layout_weight="4" />
             <TextView                    
                 android:layout_weight="2" 
                 android:text="@string/total" 
                 android:textSize="@dimen/medium_text_size" />
             <TextView                     
                 android:layout_weight="2" 
                 android:text="@string/goal" 
                 android:textSize="@dimen/medium_text_size" />
	     </TableRow>
	     
	     <TableRow
	         android:minHeight="@dimen/medium_entry_height">
	         <TextView              
                 android:layout_weight="1" android:layout_gravity="center_vertical"
                 android:background= "@drawable/carb_pie_color_box"/>
             <TextView                     
                 android:layout_weight="4" android:layout_gravity="center"
                 android:paddingLeft="@dimen/small_padding"
                 android:text="@string/Carbohydrates" android:textSize="@dimen/medium_text_size"/>
             <TextView   
                 android:id="@+id/carb_percentage"                 
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding"
                 android:textSize="@dimen/medium_text_size" />
             <TextView                     
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding" android:text="@string/carbs_goal" 
                 android:textSize="@dimen/medium_text_size" />
	     </TableRow>
	     
	     <TableRow
	         android:minHeight="@dimen/medium_entry_height">
	         <TextView                   
                 android:layout_weight="1" android:layout_gravity="center"
                 android:background= "@drawable/fat_pie_color_box"/>
             <TextView                     
                 android:layout_weight="4" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding" android:text="@string/Fat" 
                 android:textSize="@dimen/medium_text_size" />
             <TextView   
                 android:id="@+id/fat_percentage"                 
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding"
                 android:textSize="@dimen/medium_text_size" />
             <TextView                     
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding" android:text="@string/fat_goal" 
                 android:textSize="@dimen/medium_text_size" />
	     </TableRow>
	     
	     <TableRow
	         android:minHeight="@dimen/medium_entry_height">
	         <TextView                   
                 android:layout_weight="1" android:layout_gravity="center"
                 android:background= "@drawable/protein_pie_color_box"/>
             <TextView                     
                 android:layout_weight="4" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding" android:text="@string/Protein" 
                 android:textSize="@dimen/medium_text_size"/>
             <TextView   
                 android:id="@+id/protein_percentage"                 
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding"
                 android:textSize="@dimen/medium_text_size" />
             <TextView                     
                 android:layout_weight="2" android:layout_gravity="center_vertical"
                 android:paddingLeft="@dimen/small_padding" android:text="@string/protein_goal" 
                 android:textSize="@dimen/medium_text_size" />
	     </TableRow>
	     
	 </TableLayout>
 
</RelativeLayout>
