<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent" android:layout_height="wrap_content"
	    tools:context=".HomePageActivity">
	    
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/low_light_gray">
		    
		    <TextView
		        android:id="@+id/date" 
		        android:layout_width="match_parent" android:layout_height="@dimen/medium_large_entry_height" 
		        android:gravity="center"            android:background="@color/white"
		        android:text="@string/date"         android:textStyle="bold"
		        android:textSize="@dimen/medium_text_size"  android:textColor="@color/my_blue" />         	
			<TextView
		        android:id="@+id/calories_remaining_number"      android:layout_below="@+id/date"
		        android:layout_width="wrap_content"              android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"                   
		        android:layout_marginLeft="@dimen/activity_horizontal_margin"
		        android:text="@string/calories_remaining_number" android:textStyle="bold" 
		        android:textSize="@dimen/extra_large_text_size"  android:textColor="@color/my_green" />			        
		    <TextView 
			    android:id="@+id/calories_remaining"
			    android:layout_width="wrap_content"       android:layout_height="wrap_content"
			    android:layout_below="@id/calories_remaining_number"   
			    android:layout_marginLeft="@dimen/activity_horizontal_margin"
			    android:text="@string/calories_remaining" android:textSize="@dimen/small_text_size" 
			    android:textColor="@color/text_gray" />	  
			<View 
		        android:id="@+id/center_fake_view" android:layout_centerHorizontal="true"
		        android:layout_width="0dp"  android:layout_height="0dp"/>  		
		    <View 
		        android:id="@+id/button_bottom_gap" 
		        android:layout_width="0dp"  android:layout_height="@dimen/small_vertical_margin"
		        android:layout_toRightOf="@id/center_fake_view"
		        android:layout_alignBottom="@id/calories_remaining"/>    	    
		    <Button 
			    android:id="@+id/add_to_diary"           
			    android:layout_width="wrap_content"      android:layout_height="wrap_content"
			    android:layout_marginRight="@dimen/activity_horizontal_margin"        
			    android:layout_toRightOf="@id/center_fake_view"
			    android:layout_above="@id/button_bottom_gap"
			    android:layout_alignParentRight="true"       
			    android:text="@string/add_to_diary"        android:textStyle="bold"
			    android:textSize="@dimen/medium_text_size" android:textColor="@color/white" 
			    android:background="@drawable/add_to_diary_button" />			    
		    <View 
		        android:id="@+id/gap_view" android:layout_width="match_parent"
		        android:layout_height="@dimen/small_vertical_margin" 
		        android:layout_below="@id/calories_remaining"/>		    
		        
		    <TableLayout 
		        android:id="@+id/calorie_break_down" android:layout_below="@id/gap_view"
		        android:layout_width="match_parent" android:layout_height="wrap_content"
		        android:layout_marginLeft="@dimen/small_horizontal_margin"     
		        android:layout_marginRight="@dimen/small_horizontal_margin"
		        android:paddingTop="@dimen/large_padding" android:paddingBottom="@dimen/large_padding"
		        android:paddingLeft="@dimen/small_padding" android:paddingRight="@dimen/small_padding" 
		        android:background="@drawable/calorie_break_down_rec" >
				    
	            <TableRow 
	                android:divider="@drawable/table_divider" android:showDividers="middle">
	                              
	                <TextView           
	                    android:id="@+id/calorie_goal_number"        
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:textSize="@dimen/large_text_size" android:textStyle="bold" />
	                <TextView               
	                    android:id="@+id/calorie_food_number"      
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:textSize="@dimen/large_text_size" android:textStyle="bold" />
	                <TextView  
	                    android:id="@+id/calorie_exercise_number"                  
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding" 
	                    android:textSize="@dimen/large_text_size" android:textStyle="bold" />
	                <TextView      
	                    android:id="@+id/calorie_net_number"               
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding" 
	                    android:textSize="@dimen/large_text_size" android:textStyle="bold" />
	            </TableRow>
	                
	            <TableRow 
	                android:divider="@drawable/table_divider" android:showDividers="middle" >
	                
	                <TextView 
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:text="@string/uc_goal" 
	                    android:textSize="@dimen/extra_small_text_size" android:textColor="@color/text_gray" />
	                <TextView 
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:text="@string/uc_food" 
	                    android:textSize="@dimen/extra_small_text_size" android:textColor="@color/text_gray" />
	                <TextView 
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:text="@string/uc_exercise" 
	                    android:textSize="@dimen/extra_small_text_size" android:textColor="@color/text_gray" />
	                <TextView 
	                    android:layout_weight="1" android:paddingLeft="@dimen/medium_padding"
	                    android:text="@string/uc_net" 
	                    android:textSize="@dimen/extra_small_text_size" android:textColor="@color/text_gray" />
	            </TableRow>
	        </TableLayout>
		        
		    <TextView	        
	            android:id="@+id/summary" android:text="@string/daily_summary" 
	            android:textStyle="bold" android:textSize="@dimen/medium_text_size"  
	            android:textColor="@color/white" android:gravity="center_vertical"
	            android:layout_width="match_parent" android:layout_height="@dimen/medium_large_entry_height"
	            android:layout_below="@id/calorie_break_down"
	            android:layout_marginTop="10dp" android:background="@color/my_blue"
	            android:paddingLeft="@dimen/large_padding" />
		    
		    <TableLayout
		        android:id="@+id/nutritionTableFragment"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:layout_below="@id/summary" />
		        
		</RelativeLayout>	
	</ScrollView>